--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+
+@import "../src/components/Navbar/_navbar.scss";
+@import "../src/components/Hero/hero.scss";
 
 * {
   margin: 0;
@@ -15,17 +19,4 @@ body {
   background-color: #000;
   color: #fff;
   font-family: "Inter";
-}
-
-.navbar {
-  &_navlinks {
-    display: flex;
-    gap: 3rem;
-    align-items: center;
-    justify-content: center;
-    list-style: none;
-    font-size: 16px;
-    color: #c7c7c7;
-    padding: 36px 0;
-  }
 }
