--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@
 
 @import "../src/components/Navbar/_navbar.scss";
 @import "../src/components/Hero/hero.scss";
+@import "../src/components/FeaturedProjects/FeaturedProjectsComponenet.scss";
 
 * {
   margin: 0;
