--- a/src/components/Hero/_hero.scss
+++ b/src/components/Hero/_hero.scss
@@ -1,6 +1,7 @@
 .hero {
   display: flex;
   justify-content: space-between;
+  padding: 30px 0 80px 0;
 
   &_leftside {
     width: 544px;
@@ -34,6 +35,7 @@
         padding: 19px 24px;
         text-transform: uppercase;
         border-radius: 100px;
+        cursor: pointer;
       }
 
       &_linkedin,
@@ -47,6 +49,7 @@
         color: #d3e97a;
         background-color: #222222;
         border-radius: 100px;
+        cursor: pointer;
       }
     }
   }
@@ -58,6 +61,4 @@
       border-radius: 16px;
     }
   }
-
-  padding: 30px 0 80px 0;
 }
