FeaturedProject and AboutMe section

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@
 @import "../src/components/Navbar/_navbar.scss";
 @import "../src/components/Hero/hero.scss";
 @import "../src/components/FeaturedProjects/FeaturedProjectsComponenet.scss";
+@import "../src/components/AboutMe/AboutMeComponent.scss";
 
 * {
   margin: 0;
