--- a/src/components/FeaturedProjects/FeaturedProjectsComponenet.scss
+++ b/src/components/FeaturedProjects/FeaturedProjectsComponenet.scss
@@ -1,3 +1,110 @@
 .featured {
-  border-top: #484848 1px solid;
+  padding: 5rem;
+  width: 90%;
+  margin: 0 auto;
+  color: #fff;
+
+  &__title {
+    text-transform: uppercase;
+    font-size: 72px;
+    font-family: "Bebas Neue";
+    font-weight: 500;
+    line-height: 0.9;
+  }
+
+  &__subtitle {
+    font-size: 1.2rem;
+    margin-bottom: 2rem;
+  }
+
+  &__projects {
+    display: flex;
+    justify-self: center;
+    flex-direction: column;
+    gap: 3rem;
+  }
+}
+
+.project {
+  display: flex;
+  background-color: #181818;
+  border-radius: 8px;
+  overflow: hidden;
+
+  &__image {
+    position: relative;
+    flex: 1;
+    img {
+      width: 100%;
+      height: auto;
+    }
+    &__tag {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background: #ffcc00;
+      color: #000;
+      padding: 0.25rem 0.5rem;
+      border-radius: 4px;
+      font-size: 0.9rem;
+    }
+  }
+
+  &__info {
+    flex: 1;
+    padding: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  &__title {
+    font-size: 1.7rem;
+    margin-bottom: 1rem;
+  }
+
+  &__description {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+    color: #ccc;
+  }
+
+  &__details {
+    font-size: 0.9rem;
+    margin-bottom: 1rem;
+    color: #aaa;
+
+    p {
+      margin: 0.3rem 0;
+    }
+  }
+
+  &__links {
+    display: flex;
+    gap: 1rem;
+
+    .project__link,
+    .project__link--github {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 13px 18px;
+      font-size: 14px;
+      color: #d3e97a;
+      background-color: #222222;
+      border-radius: 100px;
+      cursor: pointer;
+      text-decoration: none;
+    }
+
+    .project__link--github {
+      background-color: #d3e97a;
+      color: #000;
+    }
+
+    .project__link:hover,
+    .project__link--github:hover {
+      opacity: 0.7;
+    }
+  }
 }
