Lets connect component

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@
 @import "../src/components/Hero/hero.scss";
 @import "../src/components/FeaturedProjects/FeaturedProjectsComponenet.scss";
 @import "../src/components/AboutMe/AboutMeComponent.scss";
+@import "../src/components/Connect/_connect.scss";
 
 * {
   margin: 0;
